# junction_2022_wolt

./: .gitignore  main.py  pyproject.toml  readme.md
backend/: backend.py
frontend/: frontend.py
frontend/templates/: index.html
