[tool.poetry]
name = "junction-2022"
version = "0.1.0"
description = ""
authors = ["Martin <35747507+croidzen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "junction_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
requests = "^2.28.1"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
